testsuite/gnatprove/tests/SB07-003__crash/test.out
database.adb:15:04: error: "Item" is not writable
database.adb:15:04: error: instantiation error at spark-containers-formal-doubly_linked_lists.ads:84
database.adb:15:04: error: instantiation error at spark-containers-functional-vectors.ads:277
database.adb:15:04: error: object was declared as not writable at spark-containers-functional-vectors.ads:277, instance at spark-containers-formal-doubly_linked_lists.ads:84, instance at line 15
database.adb:19:04: info: initialization of "Database" proved
spark-containers-formal-doubly_linked_lists.ads:411:13: info: subprogram "At_End" will terminate, terminating annotation has been proved, in instantiation at database.adb:15
spark-containers-formal-doubly_linked_lists.ads:416:13: info: subprogram "At_End" will terminate, terminating annotation has been proved, in instantiation at database.adb:15
spark-containers-functional-maps.ads:285:13: info: subprogram "Copy_Key" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-doubly_linked_lists.ads:175, in instantiation at database.adb:15
spark-containers-functional-maps.ads:286:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-doubly_linked_lists.ads:175, in instantiation at database.adb:15
spark-containers-functional-vectors.ads:100:13: info: subprogram "First" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-doubly_linked_lists.ads:84, in instantiation at database.adb:15
spark-containers-functional-vectors.ads:101:06: info: data dependencies proved, in instantiation at spark-containers-formal-doubly_linked_lists.ads:84, in instantiation at database.adb:15
spark-containers-functional-vectors.ads:277:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-doubly_linked_lists.ads:84, in instantiation at database.adb:15
gnatprove: error during flow analysis and proof
